[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Title/Buttons/NewGameButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/font0.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/Title/Buttons/ContinueButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Title/Buttons/OptionsButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Sprites/controllerControls.png" type="Texture" id=7]
[ext_resource path="res://Fonts/Roboto-Black.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Assets/Audio/control/selection.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/Audio/music/ambient_office_spice0.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/Sprites/Environment/background_pixelart.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 18
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[node name="Node2D" type="Node2D"]

[node name="TitleScreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 10.0
margin_bottom = 10.0
script = ExtResource( 1 )

[node name="Menu" type="VBoxContainer" parent="TitleScreen"]
margin_left = 20.0
margin_top = 10.0
margin_right = 1000.0
margin_bottom = 550.0

[node name="Logo" type="TextureRect" parent="TitleScreen/Menu"]
margin_right = 980.0
margin_bottom = 358.0
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="CenterRow" type="HBoxContainer" parent="TitleScreen/Menu"]
margin_top = 362.0
margin_right = 980.0
margin_bottom = 489.0

[node name="Buttons" type="VBoxContainer" parent="TitleScreen/Menu/CenterRow"]
margin_right = 488.0
margin_bottom = 127.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 7
alignment = 1

[node name="NewGameButton" parent="TitleScreen/Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_right = 488.0
rect_min_size = Vector2( 360, 60 )
focus_neighbour_bottom = NodePath("../OptionsButton")
focus_next = NodePath("../OptionsButton")
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )

[node name="ContinueButton" parent="TitleScreen/Menu/CenterRow/Buttons" instance=ExtResource( 5 )]
visible = false
margin_top = 67.0
margin_right = 488.0
margin_bottom = 127.0
rect_min_size = Vector2( 360, 60 )

[node name="OptionsButton" parent="TitleScreen/Menu/CenterRow/Buttons" instance=ExtResource( 6 )]
margin_top = 67.0
margin_right = 488.0
margin_bottom = 127.0
rect_min_size = Vector2( 360, 60 )
focus_neighbour_top = NodePath("../NewGameButton")
focus_next = NodePath("../NewGameButton")

[node name="CenterContainer" type="CenterContainer" parent="TitleScreen/Menu/CenterRow"]
margin_left = 492.0
margin_right = 980.0
margin_bottom = 127.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Controls" type="Sprite" parent="TitleScreen/Menu/CenterRow/CenterContainer"]
position = Vector2( 128, 116 )
scale = Vector2( 1.7, 1.7 )
texture = ExtResource( 7 )

[node name="VersionLabel" type="Label" parent="TitleScreen/Menu"]
margin_top = 493.0
margin_right = 980.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 1 )
text = "Version 0.3
Phil-fork"
align = 2
valign = 2

[node name="AudioSelection" type="AudioStreamPlayer" parent="TitleScreen"]
stream = ExtResource( 9 )

[node name="AudioBackground" type="AudioStreamPlayer" parent="TitleScreen"]
stream = ExtResource( 10 )
volume_db = -25.0

[node name="bckgrnd" type="Sprite" parent="."]
z_index = -12
texture = ExtResource( 11 )
centered = false
[connection signal="pressed" from="TitleScreen/Menu/CenterRow/Buttons/NewGameButton" to="TitleScreen" method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="TitleScreen/Menu/CenterRow/Buttons/ContinueButton" to="TitleScreen" method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="TitleScreen/Menu/CenterRow/Buttons/OptionsButton" to="TitleScreen" method="_on_OptionsButton_pressed"]
[connection signal="finished" from="TitleScreen/AudioSelection" to="TitleScreen" method="_on_AudioSelection_finished"]
[connection signal="finished" from="TitleScreen/AudioBackground" to="TitleScreen" method="_on_AudioBackground_finished"]
